// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the html structure of a CardSlot with a single search result, image selected 1`] = `
<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        class="card-select"
      >
        <i
          class="bi bi-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="rounded-lg shadow-lg ratio ratio-7x5"
        style="z-index: 0;"
      >
        <img
          alt="Card 1"
          class="card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <p
        class="mpccard-counter text-center align-middle"
      >
        1 / 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot with a single search result, no image selected 1`] = `
<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        class="card-select"
      >
        <i
          class="bi bi-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="rounded-lg shadow-lg ratio ratio-7x5"
        style="z-index: 0;"
      >
        <img
          alt="Card 1"
          class="card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <p
        class="mpccard-counter text-center align-middle"
      >
        1 / 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot with a single search result, slot selected 1`] = `
<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        aria-label="select-front0"
        class="card-select"
      >
        <i
          class="bi bi-check-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="rounded-lg shadow-lg ratio ratio-7x5"
        style="z-index: 0;"
      >
        <img
          alt="Card 1"
          class="card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <p
        class="mpccard-counter text-center align-middle"
      >
        1 / 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot with multiple search results, image selected 1`] = `
<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        class="card-select"
      >
        <i
          class="bi bi-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="rounded-lg shadow-lg ratio ratio-7x5"
        style="z-index: 0;"
      >
        <img
          alt="Card 1"
          class="card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
        />
        <img
          alt="Card 2"
          class="sc-gueYoa jvIOZX card-img"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
        <img
          alt="Card 3"
          class="sc-gueYoa jvIOZX card-img"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <button
        class="mpccard-counter-btn btn btn-outline-info"
        type="button"
      >
        1
         / 
        3
      </button>
      <div>
        <button
          class="prev btn btn-outline-primary"
          type="button"
        >
          ❮
        </button>
        <button
          class="next btn btn-outline-primary"
          type="button"
        >
          ❯
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot's grid selector, cards faceted by source 1`] = `
<div
  class="modal-dialog modal-lg"
  data-testid="front-slot0-grid-selector"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <div
        class="modal-title h4"
      >
        Select Version
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
    </div>
    <div
      class="modal-body"
    >
      <div
        class="row"
      >
        <div
          class="col-md-8 col-sm-6"
        >
          <div
            class="btn toggle btn-md btn-success"
            role="button"
            style="width: 100%; height: 38px;"
          >
            <div
              class="toggle-group"
            >
              <span
                class="btn toggle-on btn-md flex-centre btn-success"
              >
                Facet By Source
              </span>
              <span
                class="btn toggle-off btn-md flex-centre btn-info"
              >
                Group All Cards Together
              </span>
              <span
                class="toggle-handle btn btn-md btn-default"
              />
            </div>
          </div>
        </div>
        <div
          class="col-md-4 col-sm-6"
        >
          <div
            class="d-grid gap-0"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              <i
                class="bi bi-arrows-collapse"
                style="padding-right: 0.5em;"
              />
               
              Collapse
               All
            </button>
          </div>
        </div>
      </div>
      <br />
      <div
        class="sticky-top"
        style="background-color: rgb(78, 93, 107); z-index: 100;"
      >
        <hr />
        <div
          class="d-flex ps-2 pe-2 hstack gap-2"
        >
          <h3
            class="orpheus prevent-select"
            style="font-style: italic;"
          >
            Source 1
          </h3>
          <h6
            class="text-primary prevent-select"
          >
            4
             version
            s
          </h6>
          <h4
            class="ms-auto bi bi-chevron-left rotate-90"
            data-testid="source_1-collapse-header"
            style="transition: all 0.25s 0s;"
          />
        </div>
      </div>
      <div
        class="collapse show"
        data-testid="source_1-collapse"
      >
        <hr />
        <div
          class="g-0 row row-cols-xxl-4 row-cols-xl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-2"
        >
          <div
            class="mpccard mpccard-hover card"
          >
            <div
              class="pb-0 text-center card-header"
            >
              <p
                class="mpccard-slot"
              >
                Option 1
              </p>
            </div>
            <div>
              <div
                class="rounded-lg shadow-lg ratio ratio-7x5"
                style="z-index: 0;"
              >
                <img
                  alt="Card 1"
                  class="card-img card-img-fade-in"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src=""
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
                />
              </div>
              <div
                class="mb-0 text-center card-body"
              >
                <div
                  class="mpccard-name card-subtitle h6"
                >
                  Card 1
                </div>
                <div
                  class="mpccard-spacing"
                >
                  <p
                    class="mpccard-source card-text"
                  >
                    Source 1 [1200 DPI]
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mpccard mpccard-hover card"
          >
            <div
              class="pb-0 text-center card-header"
            >
              <p
                class="mpccard-slot"
              >
                Option 2
              </p>
            </div>
            <div>
              <div
                class="rounded-lg shadow-lg ratio ratio-7x5"
                style="z-index: 0;"
              >
                <img
                  alt="Card 2"
                  class="card-img card-img-fade-in"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src=""
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
                />
              </div>
              <div
                class="mb-0 text-center card-body"
              >
                <div
                  class="mpccard-name card-subtitle h6"
                >
                  Card 2
                </div>
                <div
                  class="mpccard-spacing"
                >
                  <p
                    class="mpccard-source card-text"
                  >
                    Source 1 [1200 DPI]
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mpccard mpccard-hover card"
          >
            <div
              class="pb-0 text-center card-header"
            >
              <p
                class="mpccard-slot"
              >
                Option 3
              </p>
            </div>
            <div>
              <div
                class="rounded-lg shadow-lg ratio ratio-7x5"
                style="z-index: 0;"
              >
                <img
                  alt="Card 3"
                  class="card-img card-img-fade-in"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src=""
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
                />
              </div>
              <div
                class="mb-0 text-center card-body"
              >
                <div
                  class="mpccard-name card-subtitle h6"
                >
                  Card 3
                </div>
                <div
                  class="mpccard-spacing"
                >
                  <p
                    class="mpccard-source card-text"
                  >
                    Source 1 [1200 DPI]
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mpccard mpccard-hover card"
          >
            <div
              class="pb-0 text-center card-header"
            >
              <p
                class="mpccard-slot"
              >
                Option 4
              </p>
            </div>
            <div>
              <div
                class="rounded-lg shadow-lg ratio ratio-7x5"
                style="z-index: 0;"
              >
                <img
                  alt="Card 4"
                  class="card-img card-img-fade-in"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src=""
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
                />
              </div>
              <div
                class="mb-0 text-center card-body"
              >
                <div
                  class="mpccard-name card-subtitle h6"
                >
                  Card 4
                </div>
                <div
                  class="mpccard-spacing"
                >
                  <p
                    class="mpccard-source card-text"
                  >
                    Source 1 [1200 DPI]
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot's grid selector, cards grouped together 1`] = `
<div
  class="modal-dialog modal-lg"
  data-testid="front-slot0-grid-selector"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <div
        class="modal-title h4"
      >
        Select Version
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
    </div>
    <div
      class="modal-body"
    >
      <div
        class="row"
      >
        <div
          class="col-md-8 col-sm-6"
        >
          <div
            class="btn toggle btn-md off btn-info"
            role="button"
            style="width: 100%; height: 38px;"
          >
            <div
              class="toggle-group"
            >
              <span
                class="btn toggle-on btn-md flex-centre btn-success"
              >
                Facet By Source
              </span>
              <span
                class="btn toggle-off btn-md flex-centre btn-info"
              >
                Group All Cards Together
              </span>
              <span
                class="toggle-handle btn btn-md btn-default"
              />
            </div>
          </div>
        </div>
      </div>
      <br />
      <div
        class="g-0 row row-cols-xxl-4 row-cols-xl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-2"
      >
        <div
          class="mpccard mpccard-hover card"
        >
          <div
            class="pb-0 text-center card-header"
          >
            <p
              class="mpccard-slot"
            >
              Option 1
            </p>
          </div>
          <div>
            <div
              class="rounded-lg shadow-lg ratio ratio-7x5"
              style="z-index: 0;"
            >
              <img
                alt="Card 1"
                class="card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
              />
            </div>
            <div
              class="mb-0 text-center card-body"
            >
              <div
                class="mpccard-name card-subtitle h6"
              >
                Card 1
              </div>
              <div
                class="mpccard-spacing"
              >
                <p
                  class="mpccard-source card-text"
                >
                  Source 1 [1200 DPI]
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mpccard mpccard-hover card"
        >
          <div
            class="pb-0 text-center card-header"
          >
            <p
              class="mpccard-slot"
            >
              Option 2
            </p>
          </div>
          <div>
            <div
              class="rounded-lg shadow-lg ratio ratio-7x5"
              style="z-index: 0;"
            >
              <img
                alt="Card 2"
                class="card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
              />
            </div>
            <div
              class="mb-0 text-center card-body"
            >
              <div
                class="mpccard-name card-subtitle h6"
              >
                Card 2
              </div>
              <div
                class="mpccard-spacing"
              >
                <p
                  class="mpccard-source card-text"
                >
                  Source 1 [1200 DPI]
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mpccard mpccard-hover card"
        >
          <div
            class="pb-0 text-center card-header"
          >
            <p
              class="mpccard-slot"
            >
              Option 3
            </p>
          </div>
          <div>
            <div
              class="rounded-lg shadow-lg ratio ratio-7x5"
              style="z-index: 0;"
            >
              <img
                alt="Card 3"
                class="card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
              />
            </div>
            <div
              class="mb-0 text-center card-body"
            >
              <div
                class="mpccard-name card-subtitle h6"
              >
                Card 3
              </div>
              <div
                class="mpccard-spacing"
              >
                <p
                  class="mpccard-source card-text"
                >
                  Source 1 [1200 DPI]
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mpccard mpccard-hover card"
        >
          <div
            class="pb-0 text-center card-header"
          >
            <p
              class="mpccard-slot"
            >
              Option 4
            </p>
          </div>
          <div>
            <div
              class="rounded-lg shadow-lg ratio ratio-7x5"
              style="z-index: 0;"
            >
              <img
                alt="Card 4"
                class="card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1; opacity: 1;"
              />
            </div>
            <div
              class="mb-0 text-center card-body"
            >
              <div
                class="mpccard-name card-subtitle h6"
              >
                Card 4
              </div>
              <div
                class="mpccard-spacing"
              >
                <p
                  class="mpccard-source card-text"
                >
                  Source 1 [1200 DPI]
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;
